* Placed the Path for Sothoryos on 1 new instead of alot more * Changed the background for the .section__left to the same blue as the SVG background to hide unwanted Margin + When clicking on an element, you will now scroll so that the element is centered (Just add a media-query to fix a small error that's still there) + You can now toggle cities by clicking on the checkbox "Show cities / Hide cities" + You can now scroll the SVG to your own wanted size. Improve this functionality by adding a legend, adapting the width and style the range-slider. TODO: Add a functionalty to enter a value to zoom to. TODO: Make the zoom smoother
+ Added the blue background color to the SASS variables in _colors.scss

+ To calculate the position of the .svg__tools we need the width of a scrollbar, so added functionalities for that.

--- a/src/style/_body.scss
+++ b/src/style/_body.scss
@@ -1,4 +1,17 @@
 body {
     background-color: $white;
     overflow: hidden;
+    font-family: "Open Sans";
+}
+
+
+
+// This element is added to detect the height / width of a scrollbar through Javascript
+
+.scrollbar-measure {
+    width: 100px;
+    height: 100px;
+    overflow: scroll;
+    position: absolute;
+    top: -9999px;
 }
