--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -10,5 +10,7 @@ $color-red: $color-regal_red;
 $color-yellow: $color-mustard_seed;
 $color-green: $color-windsor_moss;
 
+$color-light-blue: #c8e8fb;
+
 $white: #f6f0da;
 $black: #303030;
