--- a/src/style/_content.scss
+++ b/src/style/_content.scss
@@ -13,8 +13,8 @@ section {
         display: block;
         height: 100%;
         max-height: 100%;
-        background-color:$color-yellow;
-        // flex-shrink: 5;
+        background-color: $color-light-blue;
+        flex-shrink: 2;
         overflow: auto;
     }
     & .section__right {
@@ -22,6 +22,5 @@ section {
         height: 100%;
         max-width: 80%;        
         background-color: $color-green;
-        // flex-grow: 10;
     }
 }
