--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -61,6 +61,6 @@ header {
         }
     }
 }
-:-moz-placeholder, ::-moz-placeholder, :-ms-input-placeholder, ::-webkit-input-placeholder {
-    color: $black;
+:-ms-input-placeholder, ::-ms-input-placeholder, ::-webkit-input-placeholder {
+    color: $color-green;
 }
